# multi_agent_crawler

./: .gitignore  DEPLOYMENT.md  README.md  crawler.db-shm  crawler.db-wal  github_repo_address.txt  multi_agent_workflow.md  product_prd.md  pyproject.toml  recommendation.md  requirements.txt  vercel.json
agents/: README.md  architecture_agent.md  controller_agent.md  documentation_agent.md  implementation_agent.md  innovation_agent.md
api/: index.py
docs/: diagrams.md
src/crawler_search/: __init__.py  cli.py  config.py  coordinator.py  fetcher.py  frontier.py  index_writer.py  models.py  parser.py  search_service.py  storage.py  url_normalizer.py  web.py
src/crawler_search/templates/: _base.html  dashboard.html  errors.html  index.html  job_detail.html  jobs.html  logs.html  pages.html  search.html  status.html
tests/: test_concurrent.py  test_core.py
